# QtOpenGLNativeWidget

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
Data/: PlasticSkull.mhd
